add some placeholders for results and discussion

--- a/main.tex
+++ b/main.tex
@@ -162,13 +162,13 @@ Land subsidence from excessive groundwater extraction has long affected the Chou
 
 \input{sections/methods002}
 
-\section{Results \& Discussion}
+\section{Results}
 \label{sec:result}
-
 \input{sections/results001}
 
-%\section{Discussion}
-%\label{sec:discuss}
+\section{Discussion}
+\label{sec:discuss}
+\input{sections/discuss001}
 
 \section{Conclusion}
 \label{sec:conclusion}
